--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/vorAngebot.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/vorAngebot.html.twig
@@ -47,8 +47,91 @@
     <script type="text/javascript">
         function refactorCheckboxes(){
             var tmp = document.getElementById("vorangebot_studiengang");
-            var studiengang = tmp.options[tmp.selectedIndex].text;
-            alert(studiengang);
+            var stg = tmp.options[tmp.selectedIndex].text;
+
+            var ss =document.getElementById("vorangebot_studienplan_ss");
+            var ws =document.getElementById("vorangebot_studienplan_ws");
+
+            if(stg.indexOf("Bachelor") > -1){
+                while (ss.firstChild) {
+                    ss.removeChild(ss.firstChild);
+                }
+                while (ws.firstChild) {
+                    ws.removeChild(ws.firstChild);
+                }
+
+                ss.insertAdjacentHTML('afterbegin','<input type="checkbox" id="vorangebot_studienplan_ss_0" name="vorangebot[studienplan_ss][]" value="1" /> ' +
+                '<label for="vorangebot_studienplan_ss_0">1</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_1" name="vorangebot[studienplan_ss][]" value="2" /> ' +
+                '<label for="vorangebot_studienplan_ss_1">2</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_2" name="vorangebot[studienplan_ss][]" value="3" /> ' +
+                '<label for="vorangebot_studienplan_ss_2">3</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_3" name="vorangebot[studienplan_ss][]" value="4" /> ' +
+                '<label for="vorangebot_studienplan_ss_3">4</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_4" name="vorangebot[studienplan_ss][]" value="5" /> ' +
+                '<label for="vorangebot_studienplan_ss_4">5</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_5" name="vorangebot[studienplan_ss][]" value="6" /> ' +
+                '<label for="vorangebot_studienplan_ss_5">6</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_6" name="vorangebot[studienplan_ss][]" value="7" /> ' +
+                '<label for="vorangebot_studienplan_ss_6">7</label> ' +
+                '<br />');
+
+                ws.insertAdjacentHTML('afterbegin', '<input type="checkbox" id="vorangebot_studienplan_ws_0" name="vorangebot[studienplan_ws][]" value="1" /> ' +
+                '<label for="vorangebot_studienplan_ws_0">1</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_1" name="vorangebot[studienplan_ws][]" value="2" /> ' +
+                '<label for="vorangebot_studienplan_ws_1">2</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_2" name="vorangebot[studienplan_ws][]" value="3" /> ' +
+                '<label for="vorangebot_studienplan_ws_2">3</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_3" name="vorangebot[studienplan_ws][]" value="4" /> ' +
+                '<label for="vorangebot_studienplan_ws_3">4</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_4" name="vorangebot[studienplan_ws][]" value="5" /> ' +
+                '<label for="vorangebot_studienplan_ws_4">5</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_5" name="vorangebot[studienplan_ws][]" value="6" /> ' +
+                '<label for="vorangebot_studienplan_ws_5">6</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_6" name="vorangebot[studienplan_ws][]" value="7" /> ' +
+                '<label for="vorangebot_studienplan_ws_6">7</label> ' +
+                '<br />');
+            }
+            else{
+                while (ss.firstChild) {
+                    ss.removeChild(ss.firstChild);
+                }
+                while (ws.firstChild) {
+                    ws.removeChild(ws.firstChild);
+                }
+
+                ss.insertAdjacentHTML('afterbegin', '<input type="checkbox" id="vorangebot_studienplan_ss_0" name="vorangebot[studienplan_ss][]" value="1" /> ' +
+                '<label for="vorangebot_studienplan_ss_0">1</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_1" name="vorangebot[studienplan_ss][]" value="2" /> ' +
+                '<label for="vorangebot_studienplan_ss_1">2</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ss_2" name="vorangebot[studienplan_ss][]" value="3" /> ' +
+                '<label for="vorangebot_studienplan_ss_2">3</label> ' +
+                '<br />');
+
+                ws.insertAdjacentHTML('afterbegin', '<input type="checkbox" id="vorangebot_studienplan_ws_0" name="vorangebot[studienplan_ws][]" value="1" /> ' +
+                '<label for="vorangebot_studienplan_ws_0">1</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_1" name="vorangebot[studienplan_ws][]" value="2" /> ' +
+                '<label for="vorangebot_studienplan_ws_1">2</label> ' +
+                '<br /> ' +
+                '<input type="checkbox" id="vorangebot_studienplan_ws_2" name="vorangebot[studienplan_ws][]" value="3" /> ' +
+                '<label for="vorangebot_studienplan_ws_2">3</label> ' +
+                '<br />');
+            }
         }
     </script>
 
