Style update in eigene Module

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -15,7 +15,7 @@
             <table id="modulverantwortlicher" class="table table-bordered tablesorter">
                 <thead>
                 <tr>
-                    <th>Modultitel</th>
+                    <th style="width:30%">Modultitel</th>
                     <th style="min-width: 100px; width: 7%">Kürzel</th>
                     <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                     <th style="min-width: 150px; width: 15%">Häufigkeit</th>
