Style update in Übersicht MHB

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
@@ -17,7 +17,7 @@
                     <th>Download</th>
                     <th>Beschreibung</th>
                     <th>Studiengang</th>
-                    <th>Autor</th>
+                    <th style="min-width:85px">Autor</th>
                     <th>Gültig ab</th>
                     <th>Version</th>
                     <th>Erstellungsdatum</th>
