--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
@@ -40,7 +40,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p>Zurzeit gibt es keine Modulhanbücher im System.</p>
+            <p>Zurzeit gibt es keine Modulhandbücher im System.</p>
         {% endif %}
     </div>
 
