PrüfungsleistungSonstiges + StudienleistungSonstiges > Erläuterungen (2)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbUebersicht.html.twig
@@ -11,7 +11,7 @@
     </script>
 
     <div class="table-responsive">
-        {% if mhb is not empty %}{
+        {% if mhb is not empty %}
             <table id="table" class="table table-bordered tablesorter">
                 <thead>
                 <tr>
