--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
@@ -6,7 +6,7 @@
     <style type="text/css">
         #centerDiv {
             text-align: center;
-            padding-top: 125px;
+            padding-top: 100px;
         }
         p#fachbereich {
             font-weight: bold;
@@ -22,7 +22,7 @@
 
         <br />
 
-        {# TODO: Bild wird nicht geladen (nur bei PDF) - warum? #}
+        {# funktioniert nur auf VM, nicht lokal #}
         <img src="{{ asset('bundles/fhbingenmhb/images/fh.png', absolute=true) }}" alt="FH Logo" width="450px" height="450px"/>
 
         <p id="fachbereich">
