MHB-Deckblatt (4) - fertig

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
@@ -43,7 +43,8 @@
             <br />
 
             Studiengangleiter: {{ studiengang.sgl }}<br />
-            Erstellt am {{ datum }}
+            Erstellt am {{ datum }}<br />
+            Gültig ab {{ mhb.gueltigAb }}
         </p>
     </div>
 </body>
