--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
@@ -25,7 +25,9 @@
             {{ form_row(form.beschreibung) }}
             {{ form_row(form.gueltigAb) }}
         </table>
-
+        <p style="font-weight: bold">
+            Die hier gesetzte Beschreibung taucht später im Deckblatt des Modulhandbuchs auf!
+        </p>
         {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
