$em->persist($mhb) erst am Ende

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -104,6 +104,8 @@
 
     </script>
 
+    {# TODO: Warnung, dass nur Angebote mit gültigem Modulcode gelsitet werden #}
+
     <div id="mhbWrapper">
 
         <form method="POST" action="{{ path('mhbErstellungParsen') }}">
