--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
@@ -17,17 +17,19 @@
         <table id="table" class="table table-bordered tablesorter">
             <thead>
                 <tr>
-                    <th style="">Studiengang</th>
-                    <th style="">Abschluss</th>
-                    <th style="">Studiengangleiter/in</th>
+                    <th style="width: 150px">Abschluss</th>
+                    <th>Studiengang</th>
+                    <th style="width: 200px">Fachgebiete</th>
+                    <th style="width: 200px">Studiengangleiter/in</th>
                 </tr>
             </thead>
             <tbody>
             {% for gang in courses %}
                 <tr>
-                    <td><a href="{{ path('studiengangBearbeiten', {'courseID': gang['Studiengang_ID']}) }}">{{ gang['Studiengang'] }}</a></td>
                     <td>{{ gang['Grad'] }}</td>
-                    <td>{{ gang['Titel']~' '~gang['Nachname'] }}</td>
+                    <td><a href="{{ path('studiengangBearbeiten', {'courseID': gang['Studiengang_ID']}) }}">{{ gang['Studiengang'] }}</a></td>
+                    <td><a href="#">verwalten</a></td>
+                    <td>{{ gang['Titel'] ~ ' ' ~ gang['Nachname'] }}</td>
                 </tr>
             {% endfor %}
             </tbody>
