form_theme nicht mehr notwendig

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Task/new.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Task/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
-{% form_theme form 'form_table_layout.html.twig' %}
+{#{% form_theme form 'form_table_layout.html.twig' %}#}
 
 {% block userLogout %}
 {% endblock userLogout %}
