Asserts für Fachgebiete und Vertiefungsrichtungen bei Studiengangverwaltung werden jetzt beachtet/angewendet

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -92,7 +92,7 @@
                         {% for studienplan in modulBeschreibung.getStudienplaene() %}
                             <tr>
                                 <td class="studiensemseter startsemester">{{ studienplan.getStartsemester() }}:</td>
-                                <td class="studiensemseter">{{ studienplan.getRegelsemester()|replace({'[': '', ']': ''}) }}</td> {# TODO: eventuell auch '{' und '}' erstzen #}
+                                <td class="studiensemseter">{{ studienplan.getRegelsemester()|replace({'[': '', ']': ''}) }}</td> {# TODO: eventuell auch '{' und '}' ersetzen #}
                             </tr>
                         {% endfor %}
                     </table>
