Zeilenumbruch von Überschrift in MHB-Cover geändert

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbCover.html.twig
@@ -16,8 +16,8 @@
 <body>
     <div id="centerDiv">
         <h1>
-            Modulhandbuch {{ studiengang }}<br />
-            ({{ studiengang.kuerzel }})
+            Modulhandbuch<br />
+            {{ studiengang }} ({{ studiengang.kuerzel }})
         </h1>
 
         <br />
