obsolete TODOs entfernt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -104,7 +104,7 @@
 
     </script>
 
-    {# TODO: Warnung, dass nur Angebote mit gültigem Modulcode gelsitet werden #}
+    {# TODO: Warnung, dass nur Angebote mit gültigem Modulcode gelistet werden #}
 
     <div id="mhbWrapper">
 
@@ -120,7 +120,6 @@
                         <h4>{{ key }}</h4>
                         <ul id="{{ key|replace({' ': '_'}) }}" class="angebot">
                             {% for angebot in zuordnung[key] %}
-                                {# TODO: Wenn Modulcode 'DUMMY', dann highlighten, oder nicht aufführen, oder abschicken unmöglich machen #}
                                 <li>
                                     {#<label>#}
                                     <input type="hidden" name="{{ angebot }}" value="{{ angebot.getAngebotsID() }}"/>
