Veranstaltung +VeranstaltungHistory: $autor ist jetzt foreign key TODO: Autor bei modulAenderungenAction() wieder ausgeben

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
@@ -34,7 +34,7 @@
                     <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
                     <td>{{ veranstaltung.haeufigkeit }}</td>
                     <td>{{ veranstaltung.beauftragter }}</td>
-                    <td>{{ veranstaltung.Autor }}</td>
+                    <td>{{ veranstaltung.autor }}</td>
                     <td>
                         {% for name in stgZuModul[count] %}
                             {{ name }}<br/>
